Update sample code

--- a/generators/app/templates/src/styles/app.scss
+++ b/generators/app/templates/src/styles/app.scss
@@ -1,10 +1,6 @@
 /* ==========================================================================
    App style
    ========================================================================== */
-$red: #6B211E;
-$grey: #eee;
-
 body {
-  background: $red;
-  color: $grey;
+  background: #fff;
 }
